--- a/style.css
+++ b/style.css
@@ -4,6 +4,15 @@ body{
 h1{
     font-size: 50px;
 }
-,name-highlight{
+.name-highlight{
     color: orange;
+}
+.half-width{
+    width: 40%;
+    float: left;
+    margin-left: 5%;
+    padding-left: 2%;
+}
+.half-width img{
+    width: 100%;
 }
