--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 h1{
     font-size: 50px;
 }
-.name-highlight{
+h2{
+    font-size: 40px;
+}
+p{
+    color: dimgray;
+}
+.orange-highlight{
     color: orange;
 }
 .half-width{
@@ -15,4 +22,51 @@ h1{
 }
 .half-width img{
     width: 100%;
+}
+.top-banner{
+    background-repeat: no-repeat;
+    background-image: url("developer-portfolio/top-banner.png");
+}
+section{
+    height: 500px;
+    padding-bottom: 150px;
+}
+.link-button{
+    border-radius: 5px;
+    color: white;
+    background-color: orange;
+    background-image: linear-gradient(45deg,lightsalmon,tomato);
+    font-weight: bold;
+    text-decoration: none;
+    margin: auto;
+    padding: 10px 20px;
+}
+.dream-area{
+    background-image: url("developer-portfolio/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.single-experience{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 5px;
+    height: 80%;
+    border-color: white;
+}
+.experience-area{
+    background-image: url("developer-portfolio/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack{
+    border-radius: 7px solid;
+    border-image: linear-gradient(180deg,lightsalmon,tomato);
+    border-image-slice: 1;
+}
+#baby-web{
+    border-radius: 7px solid;
+    border-image: linear-gradient(180deg,blue,cyan);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
